# googleTest-unit_test

./: README.md
test_fixture/: CMakeLists.txt  test_fixture.cpp
test_hello/: CMakeLists.txt  test_hello.cpp
test_mock/: CMakeLists.txt  test_mock_unit.cpp
test_mock/APP_SOURCES/: CMakeLists.txt
test_mock/APP_SOURCES/inc/: interface_app.h  test_packet.h
test_mock/APP_SOURCES/src/: interface_app.c  test_packet.c
test_mock/MOCK/: CMakeLists.txt
test_mock/MOCK/inc/: interface_mock.hpp
test_mock/MOCK/src/: interface_app.cpp
